- fix news block height on mobile

--- a/src/scss/common/_global.scss
+++ b/src/scss/common/_global.scss
@@ -29,6 +29,7 @@ body, html {
     height: 100vh;
     transform:translate3d(0,0,0);
     transform-style: preserve-3d;
+    perspective: 1000px;
     backface-visibility: hidden;
 }
 
